--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -46,5 +46,17 @@
         android:id="@+id/create_user_submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/submit"/>
+        android:layout_gravity="center"
+        android:background="@color/ColorBlue"
+        android:text="@string/submit"
+        android:layout_marginBottom="25dp"/>
+
+    <TextView
+        android:id="@+id/submit_error_text_view"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:text="@string/submit_error"
+        android:textColor="@color/colorAccent"
+        android:visibility="invisible"/>
 </LinearLayout>
